fix navbar wont collapse in mobile browser

--- a/public/css/lfm.css
+++ b/public/css/lfm.css
@@ -2,6 +2,9 @@
   #main {
     padding: 0px;
   }
+  #nav {
+    margin-bottom: -1px;
+  }
 }
 
 @media screen and (min-width: 768px) {
